--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "A simple slot application generating 3 random numbers and bonus on win",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-css": "node-sass --include-path scss client/scss/style.scss client/css/style.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\"",
+    "build": "rimraf dist/ && babel ./server/ --out-dir dist/ --ignore ./node_modules --watch",
+    "start": "npm run build & npm run watch-css & node dist/index.js --watch"
   },
   "repository": {
     "type": "git",
@@ -22,6 +26,18 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/ashotpahlevanyan/simpleslot#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-node": "^6.1.1",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "path": "^0.12.7",
+    "rimraf": "^2.6.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "node-sass": "^4.8.3",
+    "nodemon": "^1.17.3"
   }
 }
