--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "babel-cli": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.5",
     "node-sass": "^4.8.3",
     "nodemon": "^1.17.3"
   }
