--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-es2015-node": "^6.1.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "helmet": "^3.12.0",
     "path": "^0.12.7",
     "rimraf": "^2.6.2"
   },
