--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple slot application generating 3 random numbers and bonus on win",
   "main": "index.js",
   "scripts": {
-    "test": "mocha /**/**.spec.js",
+    "test": "mocha test/**.spec.js --watch",
     "build-css": "node-sass --include-path scss client/scss/style.scss client/css/style.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\"",
     "build": "rimraf dist/ && babel ./server/ --out-dir dist/ --ignore ./node_modules --watch",
@@ -35,6 +35,7 @@
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
+    "assert": "^1.4.1",
     "babel-cli": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
